# iriclib

./: CMakeLists.txt  appveyor.yml
.github/workflows/: build.yml
unittest_cg_open_modify/: CMakeLists.txt
unittest_cg_open_read/: CMakeLists.txt
unittest_lock/: CMakeLists.txt
unittests_cgnsfile/: CMakeLists.txt  case_sol_readwrite.cpp  main.cpp
